Allow saving of file playlists with a dot in name

BUGFIXES:
 * Playlists with a dot in name can now be saved to Playlist Files on Disk.

BUG: 290318
FIXED-IN: 2.6